# test-scenario

./: .pre-commit-config.yaml  Makefile  README.md  agents.md  range.yml.example  site.yml
.github/workflows/: ci.yml
ansible/roles/ad_dc/: README.md
ansible/roles/ad_dc/handlers/: main.yml
ansible/roles/ad_dc/tasks/: main.yml
ansible/roles/ad_dc/vars/: main.yml
ansible/roles/elk_stack/: README.md
ansible/roles/elk_stack/handlers/: main.yml
ansible/roles/elk_stack/tasks/: main.yml
ansible/roles/elk_stack/vars/: main.yml
ansible/roles/linux_sensors/: README.md
ansible/roles/linux_sensors/handlers/: main.yml
ansible/roles/linux_sensors/tasks/: main.yml
ansible/roles/linux_sensors/vars/: main.yml
ansible/roles/wazuh_manager/: README.md
ansible/roles/wazuh_manager/handlers/: main.yml
ansible/roles/wazuh_manager/tasks/: main.yml
ansible/roles/wazuh_manager/vars/: main.yml
ansible/roles/win_sensors/: README.md
ansible/roles/win_sensors/handlers/: main.yml
attack_playbooks/: dcsync.yml  kerberoasting.yml  lateral_psexec.yml
dashboards/: attack_timeline.ndjson  auth_lsass_ntds.ndjson  lateral_movement.ndjson
infra/packer/: ubuntu.pkr.hcl  win-server.pkr.hcl  win10.pkr.hcl
infra/terraform/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
orchestrator/: pyproject.toml
orchestrator/orchestrator/: __init__.py  attack_runner.py  cli.py  collect.py  import_dashboards.py  steps.py
orchestrator/tests/: test_attack_runner.py  test_collect.py  test_import_dashboards.py
playbooks/: site.yml
playbooks/attack/: sample.yml
(+8 files in other folders)
